source/turtlebot3_ws/src/Sensor_Ros2/log/build_2025-10-05_14-54-02/sub_robot_sim/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.14 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.8 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found nav_msgs: 4.9.0 (/opt/ros/humble/share/nav_msgs/cmake)
-- Found tf2: 0.25.16 (/opt/ros/humble/share/tf2/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/build/sub_robot_sim
[ 50%] Building CXX object CMakeFiles/mock_main_odom.dir/src/mock_main_odom.cpp.o
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/sub_robot_sim/src/mock_main_odom.cpp: In member function ‘void MockMainOdomNode::on_timer()’:
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/sub_robot_sim/src/mock_main_odom.cpp:68:43: error: ‘toMsg’ is not a member of ‘tf2’
   68 |     odom_msg.pose.pose.orientation = tf2::toMsg(q);
      |                                           ^~~~~
gmake[2]: *** [CMakeFiles/mock_main_odom.dir/build.make:76: CMakeFiles/mock_main_odom.dir/src/mock_main_odom.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/mock_main_odom.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
